// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: disabled 1`] = `
<Button
  className="boolean-toggle boolean-toggle-on"
  disabled={true}
  name="toggle-name"
  onClick={[Function]}
>
  <div
    aria-label="on"
    className="boolean-toggle-handle"
  >
    <CheckIcon
      size={12}
    />
  </div>
</Button>
`;

exports[`should render correctly: off 1`] = `
<Button
  className="boolean-toggle"
  disabled={true}
  name="toggle-name"
  onClick={[Function]}
>
  <div
    aria-label="off"
    className="boolean-toggle-handle"
  >
    <CheckIcon
      size={12}
    />
  </div>
</Button>
`;

exports[`should render correctly: on 1`] = `
<Button
  className="boolean-toggle boolean-toggle-on"
  disabled={true}
  name="toggle-name"
  onClick={[Function]}
>
  <div
    aria-label="on"
    className="boolean-toggle-handle"
  >
    <CheckIcon
      size={12}
    />
  </div>
</Button>
`;
